{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "7d8fc655-713a-4bee-8457-95399d601fbb",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "6ac1081e-6497-4744-b219-11e897e11488",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "4a24a389-82ca-4545-b8e6-ad7ca9ccec99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "7603d3f2-6994-453d-9b59-fd384e2dc4bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56fc9a95-6823-470b-9940-24584881b84d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0239a3c-0c55-4adc-9f8b-dfce95a5ac80",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1db34f98-2c25-4264-8f1c-aed1cbdcc7db",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}